--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -29,7 +29,7 @@
 
   </app-aside>
 </div>
-<!--<app-footer>-->
-  <!--<span><a href="https://coreui.io/pro/angular/">Alba</a> &copy; 2018 creativeLabs.</span>-->
-  <!--<span class="ml-auto">Powered by <a href="https://coreui.io/pro/angular">CoreUI Pro for Angular</a></span>-->
-<!--</app-footer>-->
+<app-footer>
+  <span><a href="https://coreui.io/pro/angular/">Alba</a> &copy; 2018 creativeLabs.</span>
+  <span class="ml-auto">Powered by <a href="https://coreui.io/pro/angular">CoreUI Pro for Angular</a></span>
+</app-footer>
