--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-2">
+  <div class="col-3">
 
     <div class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
@@ -9,7 +9,7 @@
 
 
       </div>
-      <p class="mb-1">Description</p>
+      <p class="mb-1">Descriptiond longer</p>
       <small>
         FirstName
         Last</small>
